# fabseal-micro

./: API.md  Cargo.toml  README.md  demo.sh  rustfmt.toml
config/: default.toml
micro/: Cargo.toml
micro-common/: Cargo.toml
micro-common/src/: lib.rs  request_id.rs  settings.rs
micro/config/: default.toml
micro/src/: main.rs  prepare_image.rs  settings.rs
micro/src/site/: create.rs  mod.rs  rmq_ops.rs  types.rs  util.rs
src/: main.rs
src/site/: create.rs
worker-blender/: Cargo.toml
worker-blender/src/: main.rs  settings.rs  worker.rs
worker-blender/src/worker/: file_context.rs  util.rs
