[package]
name = "fabseal-micro"
version = "0.1.0"
authors = [ "Tobias Markus <tobias@miglix.eu>" ]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Siegler-von-Catan/fabseal-micro/"
homepage = "https://fabseal.de"
categories = [ "computer-vision", "web-programming::http-server" ]
publish = false

[dependencies]
actix-web = "4.0.0-beta"
actix-http = "3.0.0-beta"
tokio = { version = "1.7", features = ["rt"] }
# tokio-postgres = "0.7"
tokio-amqp = "1.0"
bb8 = "0.7"
# bb8-postgres = "0.7"
bb8-lapin = { git = 'https://github.com/adrianbenavides/bb8-lapin.git' }
bb8-redis = "0.9"
env_logger = "0.8"
lapin = "1.7"
amq-protocol-types = "6.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
