[package]
name = "fabseal-micro"
version = "0.1.0"
authors = [ "Tobias Markus <tobias@miglix.eu>" ]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Siegler-von-Catan/fabseal-micro/"
homepage = "https://fabseal.de"
categories = [ "computer-vision", "web-programming::http-server" ]
publish = false

[dependencies]
fabseal-micro-common = { path = "../micro-common" }

bytes = "1.0"
actix-web = "3"
actix-http = "2"
# actix-session = "0.5-beta.2"
actix-multipart = "0.3"
# actix-session = { git = 'https://github.com/actix/actix-extras.git' }
actix-session =  "0.4"
actix-redis = "0.9"
actix-storage = "0.2"
actix-storage-redis = "0.2"
# actix-storage-sled = { version = "0.2", features = ["actor"] }

# tokio = { version = "1.7", features = ["rt"] }
# tokio-postgres = "0.7"
# tokio-amqp = "1.0"
tokio = "0.2"
bb8 = "0.4.2"
# bb8-postgres = "0.7"
# bb8-lapin = { git = 'https://github.com/adrianbenavides/bb8-lapin.git' }
bb8-lapin = "0.1"
# bb8-redis = "0.9"
env_logger = "0.8"
lapin = "1.7"
amq-protocol-types = "6.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
time = "0.2"
mime = "0.3"
futures-util = "0.3"

config = "0.11"