[package]
name = "fabseal-micro"
version = "0.1.0"
authors = [ "Tobias Markus <tobias@miglix.eu>" ]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Siegler-von-Catan/fabseal-micro/"
homepage = "https://fabseal.de"
categories = [ "computer-vision", "web-programming::http-server" ]
publish = false

[dependencies]
fabseal-micro-common = { path = "../micro-common" }

bytes = "1.0"
actix = { version = "0.10", default-features = false }
actix-web = { version = "3", default-features = false, features = ["secure-cookies"] }
actix-http = { version = "2", default-features = false, features = [] }
actix-multipart = "0.3"
actix-session =  "0.4"
actix-redis = "0.9"
bb8 = "0.4.2"
bb8-lapin = { version = "0.1" }
env_logger = "0.8"
lapin = "1.7"
amq-protocol-types = "6.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
time = "0.2"
mime = "0.3"
futures-util = "0.3"
redis-async = "0.6"
config = { version = "0.11", default-features = false, features = [ "toml" ] }