[package]
name = "fabseal-micro"
version = "0.1.0"
authors = [ "Tobias Markus <tobias@miglix.eu>" ]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Siegler-von-Catan/fabseal-micro/"
homepage = "https://fabseal.de"
categories = [ "computer-vision", "web-programming::http-server" ]
publish = false

[dependencies]
fabseal-micro-common = { path = "../micro-common" }

# bytes = "1.0"
# actix = { version = "0.10", default-features = false }
# actix-web = { version = "3", default-features = false, features = ["secure-cookies"] }
# actix-http = { version = "2", default-features = false, features = [] }
# actix-multipart = "0.3"
# actix-session =  "0.4"
# actix-redis = "0.9"

actix = "0.12"
actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["secure-cookies"] }
actix-cors = "^0.6.0-beta.2"
actix-http = "3.0.0-beta.8"
actix-multipart = "0.4.0-beta.5"
actix-session = "0.5.0-beta.2"
actix-redis = "0.10.0-beta.2"

env_logger = "0.8"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8"
mime = "0.3"
time = "0.2"
futures-util = "0.3"
redis-async = { version = "0.8", default-features = false, features = ["tokio10"] }
config = { version = "0.11", default-features = false, features = [ "toml" ] }