[package]
name = "fabseal-worker-blender"
version = "0.1.0"
authors = [ "Tobias Markus <tobias@miglix.eu>" ]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Siegler-von-Catan/fabseal-micro/"
homepage = "https://fabseal.de"
categories = [ "computer-vision", "web-programming::http-server" ]
publish = false

[dependencies]
fabseal-micro-common = { path = "../micro-common" }

tokio = "0.2"
env_logger = "0.8"
lapin = "1.7"
amq-protocol-types = "6.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
async-global-executor = "2"
redis = "0.21"
tempfile = "3"
config = { version = "0.11", default-features = false, features = [ "toml" ] }
anyhow = "1.0"